--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
     <a href="CSS垂直居中方法\negativemargin.html">margin负值法</a>
     <a href="CSS垂直居中方法\table-cell.html">table-cell（未脱离文档流的）</a>
     <a href="CSS垂直居中方法\transform.html">绝对定位和transform</a>
-    <a href="windowurl.html"></a>
+    <a href="windowurl.html">图片预览</a>
   </body>
 </html>
